--- a/mindfulness.html
+++ b/mindfulness.html
@@ -3,63 +3,49 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>GreenBite — Mindfulness</title>
-<style>
-  body{font-family:Arial,sans-serif;text-align:center;background:#f5fff7;}
-  .rectangle{width:200px;height:120px;margin:20px auto;background:#a8e6cf;
-    border-radius:12px;display:flex;align-items:center;justify-content:center;
-    font-size:20px;font-weight:bold;transition:transform 2s;}
-  button{margin:5px;padding:8px 14px;border:none;border-radius:6px;
-    background:#2e8b57;color:#fff;cursor:pointer;}
-  button:hover{background:#256b47;}
-  .top-bar{margin:15px;text-align:left;}
-  .home-btn{background:#4caf50;}
-  footer{margin-top:20px;color:#555;}
-</style>
+<title>Mindfulness</title>
+<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="mindfulness.css">
 </head>
 <body>
-<div class="top-bar">
-  <a href="index.html"><button class="home-btn">🏠 Home</button></a>
+<nav>
+  <div class="brand">GreenBite🍃</div>
+  <a href="index.html">Home🏠</a>
+</nav>
+
+<div style="text-align:right;font-size:1.1em;margin-bottom:8px;">
+  <span id="clock"></span>
 </div>
 
-<h1>Mindfulness</h1>
+<main>
+  <h1>Mindfulness</h1>
+  <div class="card">
+    <h2>Guided Breathing Cycle</h2>
+    <p>Follow the inhale, hold, and exhale cycle below. The circle will expand and contract to guide your breathing.</p>
+    <div id="breath" class="breath">Breathe</div>
+    <div style="width:0;height:0;border-left:30px solid transparent;border-right:30px solid transparent;border-top:40px solid #0a680d;margin:16px auto;"></div>
+    <p id="breathText"></p>
+    <div id="cycleCount" style="font-weight:bold;color:#0a680d;margin-bottom:8px;">Cycle: 0</div>
 
-<section>
-  <div id="rect" class="rectangle">Breathe</div>
-  <button onclick="startBreath()">Start</button>
-  <button onclick="stopBreath()">Stop</button>
-</section>
+    <div style="margin: 10px 0;">
+      <span style="display:inline-block;width:16px;height:16px;background:skyblue;border-radius:50%;margin-right:6px;"></span> Inhale
+      <span style="display:inline-block;width:16px;height:16px;background:lightgreen;border-radius:50%;margin:0 6px 0 16px;"></span> Exhale
+    </div>
 
-<section>
-  <h3>Calm Music</h3>
-  <button onclick="toggleMusic('nature')">Toggle Nature</button>
-  <button onclick="toggleMusic('piano')">Toggle Piano</button>
-  <audio id="nature" loop src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
-  <audio id="piano" loop src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3"></audio>
-</section>
+    <button onclick="startBreathing()">Start Breath🌬</button>
+    <button onclick="stopBreathing()">Stop</button>
 
-<footer>© GreenBite</footer>
+    <hr>
 
-<script>
-let iv;
-function startBreath(){
-  const el=document.getElementById('rect');let p=0;
-  iv=setInterval(()=>{
-    p=(p+1)%4;
-    el.textContent=['Inhale','Hold','Exhale','Hold'][p];
-    el.style.transform=['scale(1)','scale(1.3)','scale(1)','scale(0.8)'][p];
-  },3000);
-}
-function stopBreath(){
-  clearInterval(iv);
-  const el=document.getElementById('rect');
-  el.textContent='Breathe';
-  el.style.transform='scale(1)';
-}
-function toggleMusic(id){
-  const a=document.getElementById(id);
-  a.paused?a.play():a.pause();
-}
-</script>
+    <h3>Timer</h3>
+    <input id="minInput" type="number" value="1" min="1"> min
+    <button onclick="startTimer()">Start Session</button>
+    <p id="sessionMsg"></p>
+    <button id="soundToggle" onclick="toggleSound()">Toggle Ambient</button>
+  </div>
+</main>
+
+<!-- 🔗 External JavaScript -->
+<script src="mindfulness.js"></script>
 </body>
 </html>
